# Quadrapet

./: .gitattributes  .gitignore  CLAUDE.md  README.md  install_dev_dependencies.sh  llm_logs.sh  stop_all_services.sh
ai/llm-ui/agent-starter-python/: .env.example  .gitignore  install_service.sh  llm-agent.service  pyproject.toml  run.sh
ai/llm-ui/live-audio/: audio-manager.ts  audio-processor.js  (+16 more)
ai/llm-ui/live-audio-original/: README.md  index.tsx  metadata.json  package-lock.json  package.json
ai/llm-ui/moonshine-test/: fastrtc_test.py  main.py  offline_test.py  pyaudio-streaming-examples.ipynb  pyproject.toml  test_audio.m4a
ai/playground/image-description-benchmark/: .gitignore  README.md  main.py  pyproject.toml
ai/playground/image-description-benchmark/src/image_description_benchmark/: __init__.py  base_benchmark.py  bbox_types.py  benchmark_old.py.backup  config.py  gemini_benchmark.py  gemini_test.py  main.py  openai_benchmark.py  realtime_test.py  result_processor.py  runner.py  test_rfdetr.py  utils.py  visualization.py
ai/playground/image-description-benchmark/src/image_description_benchmark/images/: gt.yaml
ai/rl/: README.md  pyproject.toml  quadrapet_mjx_rl_training.py  quadrapet_mjx_rl_use_this.py  requirements.txt  test_config.py
ai/rl/conf/: config.yaml
ai/rl/conf/export/: default.yaml
ai/rl/conf/policy/: default.yaml
ai/rl/conf/reward/: default.yaml
ai/rl/conf/simulation/: default.yaml
ai/rl/conf/training/: default.yaml
analysis/: histogram.py
bags/knees_recording_2025-09-04_16-15-44/: metadata.yaml  recording_2025-09-04_16-15-44_0.mcap
bags/lie_downward_dog_arms_front_recording_2025-09-04_16-08-27/: metadata.yaml  recording_2025-09-04_16-08-27_0.mcap
bags/lie_downward_dog_recording_2025-09-04_16-08-00/: metadata.yaml  recording_2025-09-04_16-08-00_0.mcap
bags/lie_sit_lie_recording_2025-09-03_12-44-08/: metadata.yaml  recording_2025-09-03_12-44-08_0.mcap
bags/pee_recording_2025-09-04_16-16-18/: metadata.yaml  recording_2025-09-04_16-16-18_0.mcap
bags/push_up_recording_2025-09-04_16-11-34/: metadata.yaml  recording_2025-09-04_16-11-34_0.mcap
bags/sneeze_recording_2025-09-04_16-13-54/: metadata.yaml  recording_2025-09-04_16-13-54_0.mcap
bags/spider_recording_2025-09-04_16-12-38/: metadata.yaml  recording_2025-09-04_16-12-38_0.mcap
bags/stand_sit_shake_stand_recording_2025-09-03_12-47-18/: metadata.yaml  recording_2025-09-03_12-47-18_0.mcap
bags/stand_sit_stand_recording_2025-09-03_12-46-36/: metadata.yaml  recording_2025-09-03_12-46-36_0.mcap
bags/standing_downward_dog_recording_2025-09-04_16-09-51/: metadata.yaml  recording_2025-09-04_16-09-51_0.mcap
bags/swim_recording_2025-09-04_16-10-45/: metadata.yaml  recording_2025-09-04_16-10-45_0.mcap
bags/twek_recording_2025-09-04_16-14-51/: metadata.yaml  recording_2025-09-04_16-14-51_0.mcap
infra/quadrapet_image_builder/: .env.example  .gitignore  make_pios_ai_image.sh  make_pios_base_image.sh  make_pios_full_image.sh  pios_ai_arm64.pkr.hcl  pios_base_arm64.pkr.hcl  pios_full_arm64.pkr.hcl  provision_pios_ai.sh  provision_pios_base.sh  provision_pios_full.sh  readme.md  user-data
quadrapet-rs/: Cargo.toml  config.toml  install_service.sh  justfile  quadrapet-gui.service  run_gui.sh
quadrapet-rs/src/: config.rs  detection.rs  main.rs
quadrapet-rs/src/eyes/: animation.rs  drawing.rs  mod.rs  tracking.rs
quadrapet-rs/src/system/: bag_recorder.rs  battery.rs  cpu.rs  mod.rs  network.rs  service.rs
quadrapet-rs/src/ui/: cpu.rs  mod.rs  status.rs
robot/: start_ui.sh
robot/services/: install_volume_max_service.sh  volume-max.service
robot/utils/: README.md  battery_monitor.service  check_batt_voltage.py  pair_ps5_controller.sh  robot.service  robot.sh  tmux_run_robot.sh
ros2_ws/: build.sh  test_animation_system.py
ros2_ws/src/animation_controller_py/: package.xml  setup.cfg  setup.py
ros2_ws/src/animation_controller_py/animation_controller_py/: animation_controller.py
ros2_ws/src/animation_controller_py/launch/: animation_controller_py.launch.py
ros2_ws/src/animation_controller_py/launch/animations/: lie_downward_dog_recording_2025-09-04_16-08-00_0.csv  lie_sit_lie_recording_2025-09-03_12-44-08_0.csv  push_up_recording_2025-09-04_16-11-34_0.csv  sneeze_recording_2025-09-04_16-13-54_0.csv  spider_recording_2025-09-04_16-12-38_0.csv  stand_downward_dog_recording_2025-09-04_16-09-51_0.csv  stand_sit_shake_sit_stand_recording_2025-09-03_12-47-18_0.csv  stand_sit_stand_recording_2025-09-03_12-46-36_0.csv  swim_recording_2025-09-04_16-10-45_0.csv  twerk_recording_2025-09-04_16-14-51_0.csv
ros2_ws/src/animation_controller_py/test/: test_animation_controller.py
ros2_ws/src/cmd_vel_mux/: CMakeLists.txt  package.xml
ros2_ws/src/cmd_vel_mux/src/: cmd_vel_mux_node.cpp
ros2_ws/src/imu_to_tf/: CMakeLists.txt  package.xml
ros2_ws/src/imu_to_tf/launch/: imu_to_tf.launch.py
ros2_ws/src/imu_to_tf/src/: imu_to_tf_node.cpp
ros2_ws/src/joy_utils/: CMakeLists.txt  package.xml
ros2_ws/src/joy_utils/src/: estop_controller.cpp
ros2_ws/src/llm_websocket_server/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/llm_websocket_server/llm_websocket_server/: websocket_server.py
ros2_ws/src/llm_websocket_server/test/: test_websocket_client.py
ros2_ws/src/person_follower/: package.xml  setup.py
ros2_ws/src/person_follower/launch/: person_follower_launch.py
ros2_ws/src/person_follower/person_follower/: __init__.py  person_follower_node.py
ros2_ws/src/quadrapetv3_mujoco_sim/: CMakeLists.txt  README.md  mujoco_hardware_interface.xml  package.xml
ros2_ws/src/quadrapetv3_mujoco_sim/launch/: test_hw_interface.launch.py  test_hw_interface.yaml
ros2_ws/src/quadrapetv3_mujoco_sim/lib/: fixed_size_queue.hpp  mujoco_core_interactive.hpp  mujoco_hardware_interface.cpp  mujoco_hardware_interface.hpp  utils.hpp
ros2_ws/src/quadrapetv3_mujoco_sim/src/: compile.cc
scripts/: mcap_to_csv.py  record_all_except_raw_camera.sh
scripts/animation_editor/: main.py  pyproject.toml
scripts/mcap_tools/: extract_images_from_mcap_simple.py  main.py  pyproject.toml
(+202 files in other folders)
