[package]
name = "quadrapet-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = "0.27"
egui_extras = { version = "0.27", features = ["image", "all_loaders", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1.41"
zmq = "0.10"
