[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brax>=0.13.0",
    "etils>=1.13.0",
    "flax>=0.11.1",
    "hydra-core>=1.3.2",
    "jax>=0.7.1",
    "jaxlib>=0.7.1",
    "matplotlib>=3.10.5",
    "ml-collections>=1.1.0",
    "mujoco>=3.3.5",
    "mujoco-mjx>=3.3.5",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "orbax>=0.1.9",
    "plotly>=6.3.0",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.1",
]
