[project]
name = "moonshine-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastrtc[stt,tts,vad]>=0.0.30",
    "matplotlib>=3.10.5",
    "pyaudio>=0.2.14",
    "silero-vad>=6.0.0",
    "sounddevice>=0.5.2",
    "torch>=2.8.0",
    "useful-moonshine",
    "useful-moonshine-onnx",
]

[tool.uv.sources]
useful-moonshine-onnx = { git = "https://github.com/usefulsensors/moonshine.git", subdirectory = "moonshine-onnx" }
useful-moonshine = { git = "https://github.com/usefulsensors/moonshine.git" }
