<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>animation_controller_py</name>
  <version>0.0.0</version>
  <description>Python animation controller that publishes to forward command controllers</description>
  <maintainer email="nathankau@gmail.com">nathankau</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>controller_manager_msgs</depend>
  <depend>python3-pandas</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pandas</test_depend>
  <test_depend>python3-numpy</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
