<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrapet_mujoco_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nathankau@gmail.com">nathan</maintainer>
  <license>TODO: License declaration</license>

  <depend>quadrapet_v3_description</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>